--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,69 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap');
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+*{
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Silkscreen;
+}
+body{
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  
+}
+
+#root{
+  width: 100%;
+  height: 100%;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  
+}
+.container{
+  max-width: 40%;
+  min-width: 380px;
+  height: 50%;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  padding: 20px;
+  color: white;
+  gap:20px
+}
+h1{
+  color: orange;
+}
+.live{
+  display: flex;
+  position: absolute;
+  left: 5px;
+  top: 5px;
+}
+.point{
+  display: flex;
+  position: absolute;
+  right: 5px;
+  top: 5px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.form-response input{
+  padding: 5px;
+  border-radius: 10px;
+  border: none;
+  margin: 5px;
 }
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.form-response button{
+  padding: 5px;
+  border-radius: 10px;
+  cursor:pointer;
+  border:none;
+  background-color: rgb(131, 209, 14);
+  color:white;
 }
