--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,9 @@ h1{
   padding: 4px;
   cursor: pointer;
 }
+.play{
+  padding: 10px;
+  border-radius: 10px;
+  background-color: rgb(131, 209, 14);
+  color:white
+}
